Just added Small comment to enable netlify redeploy the site because the styles and link haven't been working on netlify after deployment index.html

--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,7 @@
         </nav>
         <button>CALL HOTLINE</button>
     </header>
-
+<!-- JUST ADDED SMALL COMMENT -->
     <main>
         <div class="theme-text">
             <h1 id="left-main">Report!<br>Protect!<br>Empower!</h1>
